--- a/style.css
+++ b/style.css
@@ -1,101 +1,160 @@
-
 body {
+    background-color: #202124;
+    color: #ffffff;
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-   
-    background-color: #f4f4f4;
-    
 }
 
+.container {
+    max-width: 600px;
+    margin: 50px auto;
+    text-align: center;
+}
 
+h1 {
+    font-size: 36px;
+}
 
+.task-list {
+    margin-top: 20px;
+}
 
-.del_bt{
-    width: 70px;
-    height: 30px;
-    padding: 0;
-    
-    background-color: #007bff;
-    color: #fff;
+#emptyMessage {
+    display: none;
+}
+
+.add-task-btn {
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
     border: none;
-    border-radius: 10px;
+    border-radius: 50%;
+    background-color: #4caf50;
+    color: #ffffff;
     cursor: pointer;
-    margin-left: 40px;
-    transition: background-color 0.3s ease;
-}
-.tasks-wrapper {
-    
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
 }
 
-
-#todo-list {
-    list-style-type: none;
-    padding: 0;
-}
-
-#todo-list li {
-    margin-bottom: 10px;
-}
-
-
-#todo-form {
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items:center;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
     
 }
 
-#todo-input {
-    width: calc(100% - 80px);
-    padding: 10px;
-    margin-bottom: 10px;
-    margin-top:10px ;
-    border-radius: 10px;
-    border: 1px solid #ccc;
-    margin-left: 20px;
+.modal-content {
+    background-color: #333;
+    margin: 20% auto;
+    padding: 20px;
+    border-radius: 5px;
+    width: 40%;
+    margin-top: 220px;
 }
 
-.bt {
-    width: 100px;
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+input[type="text"],
+input[type="date"],
+button {
+    width: calc(100% - 20px);
     padding: 10px;
-    background-color: #007bff;
+    margin: 5px 0;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #4caf50;
     color: #fff;
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-left: 20px;
-    margin-right: 20px;
+    
 }
 
-.bt:hover {
-    background-color: #0056b3;
+button:hover {
+    background-color: #45a049;
 }
-.left{
-    
-    
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    width: 400px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    
-    max-height: 300px; /* Limiting the height to 500px */
-    overflow-y: auto; /* Adding vertical scrollbar when content overflows */
-    overflow-x: hidden; 
-    
-}
-.right{
-    background-color: #fff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-   
-    
 
+.task-item {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+    
+}
+
+.task-item h3 {
+    margin-top: 0;
+}
+
+.task-item p{
+    overflow-wrap: break-word;
+}
+
+.delete-btn, .complete-btn {
+    background-color: #6a6a6a;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 40%;
+    margin-left: 5px;
+}
+
+.complete-btn {
+    background-color: #61d55f;
+}
+
+
+.delete-btn:hover{
+    background-color: #454545;
+}
+.filters {
+    margin-bottom: 20px;
+}
+
+.filters label {
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#sort {
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    color: #333;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+#sort:hover {
+    border-color: #999;
+}
+
+#sort:focus {
+    outline: none;
+    border-color: #4CAF50;
+}
+.completed h3,
+.completed p {
+    text-decoration: line-through;
 }
